--- a/index.html
+++ b/index.html
@@ -22,7 +22,17 @@
         <img  id="mouse_click"src="./Delani/assets/mouse_click.png">
     </div>
 </a>
-
+<!-- about section -->
+ <div class="section2" id="about">
+        <div class="text-section2">
+            <h3>ABOUT US</h3>
+            <p>When you work with us, you are part of a team of committed collaborators. All aspects of our software development process are intergrated, interactive and agile.</p>
+            <p>Our approach unifies design, development and product management to create exceptional products.</p>
+            <p>We start each project by understanding your business goals, the user's needs and the product requirements</p>
+            <p>Then we help translate them into effective and elegant solutions.</p>
+        </div>
+    </div>
+    
 <!-- javascript && jQuery -->
  	<script src="./js/jquery-3.4.0.js"></script>
     <script src="./js/script.js"></script>
