--- a/index.html
+++ b/index.html
@@ -32,7 +32,17 @@
             <p>Then we help translate them into effective and elegant solutions.</p>
         </div>
     </div>
+<!-- services section -->
+   <div class="section3">
+        <div class="text-section3">
+            <h3>SERVICES</h3>
+            <p>Before we sign a contract or write a line of code our team will spend the necessary tome needed to understand your product vision</p>
+            <p>The outcome of this scoping session is proposal or high-level statement of work.</p>
+            <p>Based on your requirements, we can provide a complete offering or just the pieces you need.</p>
+        </div>
+    </div>
     
+
 <!-- javascript && jQuery -->
  	<script src="./js/jquery-3.4.0.js"></script>
     <script src="./js/script.js"></script>
