--- a/index.html
+++ b/index.html
@@ -41,7 +41,63 @@
             <p>Based on your requirements, we can provide a complete offering or just the pieces you need.</p>
         </div>
     </div>
-    
+<!-- what we do section -->
+<div class="section4">
+    <div class="text-section4">
+        <h3>WHAT WE DO</h3>
+        <div class="table">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="onClick1">
+                        <div id="click1">
+                            <img src="./Delani/assets/services_icons/design_icon.png">
+                            <div class="caption">
+                                <p>DESIGN</p>
+                            </div>
+                        </div>
+                        <div id="data1">
+                            <h5><strong>DESIGN</strong></h5>
+                            <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.</p>
+                            <p> your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed. </p>
+                        </div>
+                    </div>
+                </div>
+                <!-- /.col-lg-4 -->
+                <div class="col-md-4">
+                    <div class="onClick2">
+                        <div id="click2">
+                            <img src="./Delani/assets/services_icons/dev_icon.png">
+                            <div class="caption">
+                                <p>DEVELOPMENT</p>
+                            </div>
+                        </div>
+                        <div id="data2">
+                            <h5><strong>DEVELOPMENT</strong></h5>
+                            <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.</p>
+                            <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- /.col-lg-4 -->
+                <div class="col-md-4">
+                    <div class="onClick3">
+                        <div id="click3">
+                            <img src="./Delani/assets/services_icons/product_icon.png">
+                            <div class="caption">
+                                <p>PROJECT MANAGEMENT</p>
+                            </div>
+                        </div>
+                        <div id="data3">
+                            <h5><strong>PROJECT MANAGEMENT</strong></h5>
+                            <p>Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live. </p>
+                            <p>iterative process allows for changes as business requirements evolve.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <!-- javascript && jQuery -->
  	<script src="./js/jquery-3.4.0.js"></script>
