portfolio html & css

--- a/index.html
+++ b/index.html
@@ -98,6 +98,104 @@
         </div>
     </div>
 </div>
+ <!-- portfolio section -->
+    <div class="section5">
+        <div class="text-section5">
+            <h3>PORTFOLIO</h3>
+            <div class="container">
+                <div class="container">
+                    <div class="row">
+
+                        <div class="col-md-12">
+
+                            <div id="mdb-lightbox-ui"></div>
+
+                            <div class="mdb-lightbox">
+
+                                <div class="row">
+                                    <figure class="col-md-3">
+                                        <div class="view overlay">
+                                            <div class="image-frame">
+                                                <img src="./Delani/assets/portfolio/work4.jpg" class="img-fluid " alt="sample image">
+                                            </div>
+                                            <div class="overlay1">
+                                                <p class="white-text">#overlay</p>
+                                            </div>
+                                        </div>
+                                    </figure>
+
+                                    <figure class="col-md-3">
+                                        <div class="view overlay">
+                                            <img src="./Delani/assets/portfolio/work3.jpg" class="img-fluid " alt="sample image">
+                                            <div class="overlay1">
+                                                <p class="white-text">#overlay</p>
+                                            </div>
+                                        </div>
+                                    </figure>
+
+                                    <figure class="col-md-3">
+                                        <div class="view overlay">
+                                            <img src="./Delani/assets/portfolio/work2.jpg" class="img-fluid " alt="sample image">
+                                            <div class="overlay1">
+                                                <p class="white-text">#overlay</p>
+                                            </div>
+                                        </div>
+                                    </figure>
+
+                                    <figure class="col-md-3">
+                                        <div class="view overlay zoom">
+                                            <img src="./Delani/assets/portfolio/work1.jpg" class="img-fluid " alt="sample image">
+                                            <div class="overlay1">
+                                                <p class="white-text">#overlay</p>
+                                            </div>
+                                        </div>
+                                    </figure>
+                                </div><br>
+                                <div class="row">
+                                    <figure class="col-md-3">
+                                        <div class="view overlay">
+                                            <img src="./Delani/assets/portfolio/work5.jpg" class="img-fluid " alt="sample image">
+                                            <div class="overlay1">
+                                                <p class="white-text">#overlay</p>
+                                            </div>
+                                        </div>
+                                    </figure>
+
+                                    <figure class="col-md-3">
+                                        <div class="view overlay">
+                                            <img src="./Delani/assets/portfolio/work6.jpg" class="img-fluid " alt="sample image">
+                                            <div class="overlay1">
+                                                <p class="white-text">#overlay</p>
+                                            </div>
+                                        </div>
+                                    </figure>
+
+                                    <figure class="col-md-3">
+                                        <div class="view overlay">
+                                            <img src="./Delani/assets/portfolio/work7.jpg" class="img-fluid " alt="sample image">
+                                            <div class="overlay1">
+                                                <p class="white-text">#overlay</p>
+                                            </div>
+                                        </div>
+                                    </figure>
+
+                                    <figure class="col-md-3">
+                                        <div class="view overlay zoom">
+                                            <img src="./Delani/assets/portfolio/work8.jpg" class="img-fluid " alt="sample image">
+                                            <div class="overlay1">
+                                                <p class="white-text">#overlay</p>
+                                            </div>
+                                        </div>
+                                    </figure>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 <!-- javascript && jQuery -->
  	<script src="./js/jquery-3.4.0.js"></script>
