fixed issue with jQuery for toggle and added Jquery for overlay

--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
         <div class="table">
             <div class="row">
                 <div class="col-md-4">
-                    <div class="onClick1">
+                    <div class="onCrack1">
                         <div id="click1">
                             <img src="./Delani/assets/services_icons/design_icon.png">
                             <div class="caption">
                                 <p>DESIGN</p>
                             </div>
                         </div>
-                        <div id="data1">
+                        <div id="magic1">
                             <h5><strong>DESIGN</strong></h5>
                             <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.</p>
                             <p> your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed. </p>
@@ -64,14 +64,14 @@
                 </div>
                 <!-- /.col-lg-4 -->
                 <div class="col-md-4">
-                    <div class="onClick2">
+                    <div class="onCrack2">
                         <div id="click2">
                             <img src="./Delani/assets/services_icons/dev_icon.png">
                             <div class="caption">
                                 <p>DEVELOPMENT</p>
                             </div>
                         </div>
-                        <div id="data2">
+                        <div id="magic2">
                             <h5><strong>DEVELOPMENT</strong></h5>
                             <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.</p>
                             <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
@@ -80,14 +80,14 @@
                 </div>
                 <!-- /.col-lg-4 -->
                 <div class="col-md-4">
-                    <div class="onClick3">
+                    <div class="onCrack3">
                         <div id="click3">
                             <img src="./Delani/assets/services_icons/product_icon.png">
                             <div class="caption">
                                 <p>PROJECT MANAGEMENT</p>
                             </div>
                         </div>
-                        <div id="data3">
+                        <div id="magic3">
                             <h5><strong>PROJECT MANAGEMENT</strong></h5>
                             <p>Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live. </p>
                             <p>iterative process allows for changes as business requirements evolve.</p>
@@ -114,7 +114,7 @@
 
                                 <div class="row">
                                     <figure class="col-md-3">
-                                        <div class="view overlay">
+                                        <div class="view overlay zoom">
                                             <div class="image-frame">
                                                 <img src="./Delani/assets/portfolio/work4.jpg" class="img-fluid " alt="sample image">
                                             </div>
@@ -125,7 +125,7 @@
                                     </figure>
 
                                     <figure class="col-md-3">
-                                        <div class="view overlay">
+                                        <div class="view overlay zoom">
                                             <img src="./Delani/assets/portfolio/work3.jpg" class="img-fluid " alt="sample image">
                                             <div class="overlay1">
                                                 <p class="white-text">#overlay</p>
@@ -134,7 +134,7 @@
                                     </figure>
 
                                     <figure class="col-md-3">
-                                        <div class="view overlay">
+                                        <div class="view overlay zoom">
                                             <img src="./Delani/assets/portfolio/work2.jpg" class="img-fluid " alt="sample image">
                                             <div class="overlay1">
                                                 <p class="white-text">#overlay</p>
@@ -143,7 +143,7 @@
                                     </figure>
 
                                     <figure class="col-md-3">
-                                        <div class="view overlay zoom">
+                                        <div class="view overlay zoom ">
                                             <img src="./Delani/assets/portfolio/work1.jpg" class="img-fluid " alt="sample image">
                                             <div class="overlay1">
                                                 <p class="white-text">#overlay</p>
@@ -153,7 +153,7 @@
                                 </div><br>
                                 <div class="row">
                                     <figure class="col-md-3">
-                                        <div class="view overlay">
+                                        <div class="view overlay zoom">
                                             <img src="./Delani/assets/portfolio/work5.jpg" class="img-fluid " alt="sample image">
                                             <div class="overlay1">
                                                 <p class="white-text">#overlay</p>
@@ -162,7 +162,7 @@
                                     </figure>
 
                                     <figure class="col-md-3">
-                                        <div class="view overlay">
+                                        <div class="view overlay zoom">
                                             <img src="./Delani/assets/portfolio/work6.jpg" class="img-fluid " alt="sample image">
                                             <div class="overlay1">
                                                 <p class="white-text">#overlay</p>
@@ -171,7 +171,7 @@
                                     </figure>
 
                                     <figure class="col-md-3">
-                                        <div class="view overlay">
+                                        <div class="view overlay zoom">
                                             <img src="./Delani/assets/portfolio/work7.jpg" class="img-fluid " alt="sample image">
                                             <div class="overlay1">
                                                 <p class="white-text">#overlay</p>
@@ -198,7 +198,7 @@
 
 
 <!-- javascript && jQuery -->
- 	<script src="./js/jquery-3.4.0.js"></script>
+ 	<script src="./js/jquery-3.4.1.js"></script>
     <script src="./js/script.js"></script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
