--- a/index.html
+++ b/index.html
@@ -225,7 +225,46 @@
         </div>
     </div>
 </div>
-
+<!-- social icons -->
+<section class="footer">
+    <footer>
+        <div class="footer-imgs">
+            <a href="https://twitter.com/login">
+                <img src="./Delani/assets/social_icons/twitter.png" alt="twitterlogo">
+            </a>
+            <a href="https://dribbble.com/">
+                <img src="./Delani/assets/social_icons/dribble.png" alt="dribble logo">
+            </a>
+            <a href="https://www.facebook.com/">
+                <img src="./Delani/assets/social_icons/facebook.png" alt="facebook logo">
+            </a>
+            <a href="https://aboutme.google.com/u/0/?referer=gplus">
+                <img src="./Delani/assets/social_icons/g_plus.png" alt="g-plus logo">
+            </a>
+            <a href="https://www.skype.com/en/">
+                <img src="./Delani/assets/social_icons/skype.png" alt="skype logo">
+            </a>
+            <a href="https://www.youtube.com/">
+                <img src="./Delani/assets/social_icons/you_tube.png" alt="youtube logo">
+            </a>
+            <a href="https://www.behance.net/">
+                <img src="./Delani/assets/social_icons/behance.png" alt="behance logo">
+            </a>
+            <a href="https://www.pinterest.com/">
+                <img src="./Delani/assets/social_icons/pinterest.png" alt="pininterst logo">
+            </a>
+            <a href="http://www.stumbleupon.com/">
+                <img src="./Delani/assets/social_icons/stumble_upon.png" alt="stumbleupon logo">
+            </a>
+            <a href="https://flickr.com/">
+                <img src="./Delani/assets/social_icons/flickr.png" alt="flickr logo">
+            </a>
+        </div>
+        <div class="footer-msg">
+            <p>DELANI STUDIO.<br>2019</p>
+        </div>
+    </footer>
+</section>
 <!-- javascript && jQuery -->
  	<script src="./js/jquery-3.4.1.js"></script>
     <script src="./js/script.js"></script>
