--- a/index.html
+++ b/index.html
@@ -200,28 +200,17 @@
 <div class="section6">
     <div class="text-section6">
         <h3>CONTACT US</h3>
-        <form name="myForm" action="" class="contact-us">
+        <form name="myForm" action="" onsubmit="return false" class="contact-us" class="was-validated">
             <input type="text" placeholder="Name..." class="contact-name" id="contact-name">
             <input type="email" placeholder="Email.." class="contact-email" id="contact-email">
             <div>
-                <textarea name="" id="contact-message" cols="100" rows="10" placeholder="Your message here..."></textarea>
+               <textarea name="" id="contact-message" cols="100" rows="10" placeholder="Your message here..."></textarea>
             </div>
             <div class="contact-btn">
                 <button id="myBtn">Submit</button>
             </div>
         </form>
-        <div role="alert" aria-live="assertive" aria-atomic="true" class="toast" data-autohide="false">
-            <div class="toast-header">
-                <img src="./Delani/assets/mouse_click.png" class="rounded mr-2" alt="...">
-                <strong class="mr-auto text-primary">Delani&middot;Studio</strong>
-                <small>Less than a minute ago</small>
-                <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                          </button>
-            </div>
-            <div class="toast-body">
-                <p class="text-success"> Hello <span id="outputName"></span> we have received your message. Thank you for reaching out to us.</p>
-            </div>
+        
         </div>
     </div>
 </div>
@@ -265,13 +254,8 @@
         </div>
     </footer>
 </section>
-<!-- javascript && jQuery -->
- 	<script src="./js/jquery-3.4.1.js"></script>
-    <script src="./js/script.js"></script>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+ <!-- Custom js -->
+ <script src="./js/jquery-3.4.1.js"></script>
+ <script src="./js/script.js"></script>
 </body>
 </html>
