--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 <div class="section6">
     <div class="text-section6">
         <h3>CONTACT US</h3>
-        <form name="myForm" action="" onsubmit="return false" class="contact-us" class="was-validated">
+        <form name="myForm"  action="https://gmail.us4.list-manage.com/subscribe/post?u=3979d95aa61af9a56af65229c&amp;id=38b136966b" method="post" class="contact-us" class="was-validated">
             <input type="text" placeholder="Name..." class="contact-name" id="contact-name">
             <input type="email" placeholder="Email.." class="contact-email" id="contact-email">
             <div>
